# lab1SPZ2024

./: CMakeLists.txt
src/: CMakeLists.txt  allocator.c  block.c  block.h  kernel.c  kernel.h  main.c
